// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-tag #render should render component as expected (1) 1`] = `
<gux-tag>
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-default gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  default
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (2) 1`] = `
<gux-tag accent="default">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-default gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  default (explicit)
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (3) 1`] = `
<gux-tag accent="1">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (4) 1`] = `
<gux-tag accent="1">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (5) 1`] = `
<gux-tag accent="1" removable="">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
      <button class="gux-tag-remove-button" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" screenreader-text="Remove tag with label: "></gux-icon>
      </button>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (6) 1`] = `
<gux-tag accent="1" disabled="" removable="">
  <mock:shadow-root>
    <div aria-disabled="true" class="gux-accent-1 gux-disabled gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        disabled tag with label:
      </div>
      <button class="gux-tag-remove-button" disabled="" type="button">
        <gux-icon class="gux-tag-remove-icon" icon-name="fa/xmark-large-regular" screenreader-text="Remove tag with label: "></gux-icon>
      </button>
    </div>
  </mock:shadow-root>
  <gux-icon decorative="true" icon-name="bolt"></gux-icon>
  Accent 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (7) 1`] = `
<gux-tag accent="1" emphasis="subtle">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-subtle gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  Subtle 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (8) 1`] = `
<gux-tag accent="1" emphasis="bold">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  Bold 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (9) 1`] = `
<gux-tag accent="1" size="small">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-small gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  Small 1
</gux-tag>
`;

exports[`gux-tag #render should render component as expected (10) 1`] = `
<gux-tag accent="1" size="large">
  <mock:shadow-root>
    <div aria-disabled="false" class="gux-accent-1 gux-emphasis-bold gux-size-large gux-tag">
      <gux-tooltip-title>
        <span>
          <slot aria-hidden="true"></slot>
        </span>
      </gux-tooltip-title>
      <div class="gux-sr-only">
        tag with label:
      </div>
    </div>
  </mock:shadow-root>
  Large 1
</gux-tag>
`;
